# sdl-platformer-game

./: CMakeLists.txt  run.sh
.github/workflows/: build.yml
src/: main.cpp
src/engine/: Config.hpp  Engine.cpp  Engine.hpp  GameObject.hpp  Input.cpp  Input.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  RigidBody.hpp  Window.cpp  Window.hpp
src/game/: Background.cpp  Background.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  Square.cpp  Square.hpp
